# dix

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: check.yml  nix.yml
crates/dix/: Cargo.toml
crates/dix-diff/: Cargo.toml
crates/dix-diff/src/: engine.rs  lib.rs  matching.rs  model.rs  render.rs  report.rs  snapshot.rs  version.rs
crates/dix/src/: json.rs  lib.rs  main.rs  render.rs  report.rs  snapshot.rs  store.rs
crates/dix/src/store/: db.rs  nix_command.rs  queries.rs  test_utils.rs
src/: diff.rs  json.rs  lib.rs  main.rs  render.rs  report.rs  snapshot.rs  store.rs
src/store/: db.rs  nix_command.rs  queries.rs  test_utils.rs
