[package]
name = "dix"
version.workspace = true
edition.workspace = true
description = "Diff Nix"
readme = "../../README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dix-diff = { workspace = true }

clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
derive_more = { workspace = true }
diff = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
size = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
